trying to get deploy to gh-pages working

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,7 +44,8 @@ a:active {
   overflow: auto;
 }
 .contact {
-  display: inline;
+  display: block;
+  width: 100%
 }
 .card {
   background: #fff;
